# md2docx

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  compose.yaml  install.ps1  install.sh  plan.md  test_math.md
.github/workflows/: docker-publish.yml  release.yml
Formula/: md2docx.rb
bucket/: md2docx.json
docs/: ap01_troubleshooting.md  ap02_changelog.md  ch01_introduction.md  ch02_installation.md  ch03_quickstart.md  ch04_markdown_syntax.md  ch05_configuration.md  ch06_templates.md  ch07_cli_reference.md  ch08_library_api.md  ch09_thai_text_samples.md  cover.md  md2docx.toml
docs/template/: cover.docx  header-footer.docx  md2docx.toml  table.docx
examples/: basic_usage.rs  code_highlighting.md  debug_svg.rs  demo_ooxml_core.rs  font_embedding.rs  generate_thai_manual.rs  include_resolution.rs  math_equations.md  mermaid-demo.md  mermaid_diagrams.rs  thai_long_paragraph.md
examples/thai-manual/: ch01_introduction.md  ch02_markdown_syntax.md  ch03_configuration.md  ch04_advanced.md  ch05_api_reference.md  cover.md  index.md  md2docx.toml  output.docx
examples/thai-manual/output/: manual-md2docx-20260129_160225.docx  manual-md2docx-20260129_160300.docx  manual-md2docx-{{currenttime:%Y%m%d_%H%M%S}}.docx  manual-md2docx-{{currenttime:YYYYMMDD_HHMMSS}}.docx  manual-md2docx.docx  md2docx-manual-th.docx  คู่มือ-md2docx.docx
examples/thai-manual/template/: README.md  cover.docx  header-footer.docx  image.docx  (+2 more)
locales/: en.toml  th.toml
plan/: 01-simple.md  01.md
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs  schema.rs
src/diff/: mod.rs
src/discovery/: files.rs  mod.rs
src/docx/: builder.rs  font_embed.rs  highlight.rs  image_utils.rs  math.rs  math_rex.rs  mod.rs  packager.rs  rels_manager.rs  template.rs  toc.rs  xref.rs
src/i18n/: detection.rs  fonts.rs  mod.rs
src/mermaid/: config.rs  mod.rs
src/parser/: ast.rs  frontmatter.rs  includes.rs  markdown.rs  mod.rs
src/project/: markdown.rs  mod.rs
src/template/: mod.rs  placeholder.rs
src/wasm/: mod.rs
tests/: header_footer_integration.rs  table_extraction_integration.rs
tests/fixtures/: mermaid-all-types.md
(+69 files in other folders)
