[package]
name = "md2docx"
version = "0.1.0"
edition = "2021"
description = "Markdown to DOCX converter with Thai/English support"
license = "MIT"
authors = ["Phongphan Phienphanich"]

[lib]
name = "md2docx"
path = "src/lib.rs"

[[bin]]
name = "md2docx"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
# Markdown parsing
pulldown-cmark = "0.12"

# DOCX generation (direct OOXML)
quick-xml = "0.37"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Config & serialization
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"

# Utilities
regex = "1"
once_cell = "1"

# Unicode & Thai support
unicode-segmentation = "1.12"
unicode-script = "0.5"

# CLI-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
toml = { version = "0.8", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
glob = { version = "0.3", optional = true }
walkdir = { version = "2", optional = true }
notify = { version = "6", optional = true }
rayon = { version = "1.10", optional = true }
gix = { version = "0.68", optional = true, default-features = false, features = ["basic"] }
image = { version = "0.25", optional = true }
resvg = { version = "0.44", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
chromiumoxide = { version = "0.7", optional = true }
icu_segmenter = { version = "1.5", optional = true }

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Blob", "Url", "Window", "Document"] }

[features]
default = ["cli"]
cli = ["dep:toml", "dep:clap", "dep:glob", "dep:walkdir", "dep:notify", "dep:rayon"]
git = ["dep:gix"]
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]
mermaid-cli = ["dep:tokio", "dep:chromiumoxide"]
thai-linebreak = ["dep:icu_segmenter"]
images = ["dep:image", "dep:resvg"]

[dev-dependencies]
tempfile = "3"
toml = "0.8"